Fix personal view icon too small issue

--- a/frontend/src/components/SideBar/index.module.css
+++ b/frontend/src/components/SideBar/index.module.css
@@ -6,7 +6,7 @@
   background-color: #ebebeb;
 }
 
-.PersonalViewButton svg,
+.PersonalViewButtonIcon,
 .AddGroup svg {
   width: 50px;
   height: 50px;
